Add filter to extract fields rather than deinterlacing
For quick/dirty cases where we are generating low-resolution
thumbnails, skip the need for deinterlacing and just extract one
of the fields.  This avoids both the deinterlacing cost as well
as the cost of the scaler, since we put 1920x540 into the scaler
rather than 1920x1080.

--- a/libavfilter/Makefile
+++ b/libavfilter/Makefile
@@ -197,6 +197,7 @@ OBJS-$(CONFIG_FIELDHINT_FILTER)              += vf_fieldhint.o
 OBJS-$(CONFIG_FIELDMATCH_FILTER)             += vf_fieldmatch.o
 OBJS-$(CONFIG_FIELDORDER_FILTER)             += vf_fieldorder.o
 OBJS-$(CONFIG_FIELDMERGE_FILTER)             += vf_fieldmerge.o
+OBJS-$(CONFIG_FIELDEXTRACT_FILTER)           += vf_fieldextract.o
 OBJS-$(CONFIG_FILLBORDERS_FILTER)            += vf_fillborders.o
 OBJS-$(CONFIG_FIND_RECT_FILTER)              += vf_find_rect.o lavfutils.o
 OBJS-$(CONFIG_FLOODFILL_FILTER)              += vf_floodfill.o
